# geos

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  README.md.skt.md  build.rs
.github/workflows/: CI.yml
examples/: coords_seq.rs  from_geo.rs  prepared_geom.rs  quartier_paris.geojson  verbose_example.rs  with_gdal.rs
geos-sys-bind/: Cargo.toml  README.md
geos-sys-bind/src/: main.rs
src/: buffer_params.rs  context_handle.rs  conversion_test.rs  coord_seq.rs  enums.rs  error.rs  ffi.rs  from_geo.rs  from_geojson.rs  functions.rs  geojson_writer.rs  geom.rs  geometry.rs  lib.rs  main.rs  make_valid_params.rs  prepared_geom.rs  prepared_geometry.rs  spatial_index.rs  test.rs  to_geo.rs  to_geojson.rs  traits.rs  types_geom.rs  voronoi.rs  wkb_writer.rs  wkt_writer.rs
sys/: Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
sys/check_missing/: check_missing.py  geos_c.h
sys/geos-src/: Cargo.toml  build.rs
sys/prebuilt-bindings/: geos_3.10.rs  geos_3.11.rs  geos_3.12.rs  geos_3.13.rs  geos_3.14.rs  geos_3.6.rs  geos_3.7.rs  geos_3.8.rs  geos_3.9.rs
sys/src/: functions.rs  lib.rs  types.rs
tests/: prep_drop_geom.rs  skeptic.rs
