[package]
name = "geos"
version = "8.1.0"
authors = [
  "Matthieu Viry <matthieu.viry@cnrs.fr>",
  "Adrien Matissart <a.matissart@qwantresearch.com>",
  "Antoine Desbordes <antoine.desbordes@gmail.com>",
  "Guillaume Pinot <texitoi@texitoi.eu>",
  "Guillaume Gomez <guillaume1.gomez@gmail.com>",
]
license = "MIT"
repository = "https://github.com/georust/geos"
keywords = ["geos", "libgeos", "geometry", "geography", "gis"]
categories = ["external-ffi-bindings", "algorithms"]
description = "Rust bindings for GEOS C API"
readme = "README.md"
edition = "2021"

[features]
dox = ["geo-types", "wkt", "json", "geos-sys/dox"]
geo = ["geo-types", "wkt"]
json = ["geojson"]
static = ["geos-sys/static"]

v3_6_0 = []
v3_7_0 = ["geos-sys/v3_7_0", "v3_6_0"]
v3_8_0 = ["geos-sys/v3_8_0", "v3_7_0"]
v3_9_0 = ["geos-sys/v3_9_0", "v3_8_0"]
v3_10_0 = ["geos-sys/v3_10_0", "v3_9_0"]
v3_11_0 = ["geos-sys/v3_11_0", "v3_10_0"]

[dependencies]
libc = "0.2"
num = "0.4"
c_vec = "2"
geojson = { version = "0.22", optional = true }
geo-types = { version = "0.7", optional = true }
wkt = { version = "0.10.3", optional = true }
geos-sys = { path = "sys", version = "2.0.4" }

[package.metadata.docs.rs]
features = ["dox"]
