[package]
name = "geos-sys"
version = "2.0.6"
authors = ["Guillaume Gomez <guillaume1.gomez@gmail.com>"]

description = "GEOS C API bindings"
repository = "https://github.com/georust/geos"
documentation = "https://docs.rs/crate/geos-sys/"
readme = "README.md"
keywords = ["geos", "libgeos", "geometry", "geography", "gis"]
categories = ["external-ffi-bindings", "algorithms"]
license = "MIT"

edition = "2021"

build = "build.rs"

[dependencies]
libc = "~0.2"
link-cplusplus = { version = "1.0", optional = true }
geos-src = { path = "./geos-src", version = "0.2.3", optional = true }

[build-dependencies]
pkg-config = "0.3.25"
semver = "1.0"

[lib]
name = "geos_sys"

[features]
default = []
dox = []
static = ["geos-src", "link-cplusplus"]
v3_7_0 = []
v3_8_0 = []
v3_9_0 = []
v3_10_0 = []
v3_11_0 = []
v3_12_0 = []
v3_13_0 = []
