[package]
name = "geos-src"
version = "0.2.2"
edition = "2018"
links = "geossrc"
build = "build.rs"
description = "static library build for geos-sys"
repository = "https://github.com/georust/geos"
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]
license = "MIT"
exclude = ["source/tests"]

[build-dependencies]
cmake = "0.1.45"
